# lunchautomate

./: .env.dev  .env.example  .gitignore  Dockerfile  README.md  cron.sh  crontab  crontab2.sh  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  pyproject.toml  requirements.txt
lunchautomate/: admin.py  api.py  asgi.py  auth.py  cron_jobs.py  custom_lunches.py  lunch.py  models.py  schemas.py  settings.py  types.py  urls.py  utils.py  wsgi.py
